--- a/style.css
+++ b/style.css
@@ -39,11 +39,14 @@ body {
     }
 
     #logoDiv{
-        border-bottom: 2vh solid rgb(0, 0, 0);
+        /*
+        border-bottom: 1vh solid rgb(41, 41, 41);
+        background-color: rgba(0, 0, 0, 0.5);
+        */
         max-width: 100%;
         height: 16vh;
         padding: 6% 0% 0% 0%;
-        background-color: rgba(0, 0, 0, 0.5);
+        
     }
 
     img[src="./images/logo.png"]{
@@ -252,12 +255,12 @@ body {
 
 /* Drink Photo & Recipe */
 #drinkTitle{
-    text-shadow: 2px 2px 10px rgb(88, 88, 88), 0 0 10px rgb(88, 88, 88), 0 0 10px rgb(88, 88, 88);
+    text-shadow: 2px 2px 10px rgb(182, 145, 121, .5), 0 0 10px rgb(182, 145, 121, .5), 0 0 10px rgb(182, 145, 121, .5);
     color: antiquewhite;
     font-size: 4vh;
     text-decoration: underline;
     width: 100%;
-    margin-bottom: 1%;
+    margin-bottom: 2vh;
 }
 
 #photoDiv{
@@ -269,7 +272,7 @@ body {
 #drinkPhoto{
     margin-bottom: 5vh;
     border: 4px outset rgb(122, 113, 113);
-    box-shadow: 1px 1px 5px rgb(88, 88, 88), 0 0 5px rgb(88, 88, 88), 0 0 5px rgb(88, 88, 88);
+    box-shadow: 1px 1px 5px rgb(182, 145, 121, .5), 0 0 5px rgb(182, 145, 121, .5), 0 0 5px rgb(182, 145, 121, .5);
     max-width: auto;
     height: 45vh;
     /*display: block;*/
@@ -286,7 +289,7 @@ img[src="./images/logo.png"]{
     display: none;
     color: antiquewhite;
     margin-left: 5%;
-    width: 45%;                    
+    width: 40%;                    
     height: 85%;
     padding-left: 0;
     background-color: rgba(0, 0, 0, 0);
@@ -296,15 +299,16 @@ img[src="./images/logo.png"]{
 }
 
 #recipeInfoDiv{
-    border: 4px outset rgb(122, 113, 113);
-    background-color: rgba(0, 0, 0, 0.3);
+    border-left: 1px solid antiquewhite;
+    border-right: 1px solid antiquewhite;
     max-width: auto;
     height: 40vh;
-    width: 20%;                    
+    width: 28%;                    
     height: 75%;
     color: antiquewhite;
     font-size: 3.3vh;
     margin-bottom: 2%;
+    margin-right: 3vw;
     padding: 1%;
 }
 
@@ -312,7 +316,7 @@ img[src="./images/logo.png"]{
     display: grid;
     grid-template-columns: auto; /*dont need the extra columns fix later*/
     grid-template-rows: min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content min-content;
-    column-gap: 2vw;
+    
     height: 100%;
     font-size: 3.5vh;
 }
