--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
         */
         max-width: 100%;
         height: 16vh;
-        padding: 6% 0% 0% 0%;
+        padding: 3% 0% 0% 0%;
         
     }
 
@@ -61,21 +61,26 @@ body {
     #portraitButtonDiv{
         border: 4px outset rgb(122, 113, 113);
         margin: 5%;
+        padding: 1vw;
+        height: 20%;
         display: flex;
         flex-wrap: wrap;
+        justify-content: center;
+        align-items: center;
         background-color: rgba(0, 0, 0, 0.5);
     }
 
     .portraitButtons{
         border: 4px outset rgb(122, 113, 113);
         width: 35vw;
-        height: 15vh;
-        font-size: 2.75vh;
+        height: 8vh;
+        font-size: 2vh;
         background-color: black;
         color: white;
-        padding: 4vh 4vw;
         display: flex;
-        margin: 4vw auto;
+        flex-wrap: wrap;
+        align-items: center;
+        margin: 2vw;
         justify-content: center;
     }  
 
@@ -87,7 +92,7 @@ body {
     }
     
     #portraitInventoryButton{
-        padding-top: 10%;
+        padding-top: 0%;
     }
 
     button, img, p, .grid-item{
@@ -95,6 +100,7 @@ body {
     }
 
     #portraitContainer{
+        height: 40%;
         border: 4px outset rgb(122, 113, 113);
         margin: 0% 10%;
         text-align: center;
