--- a/style.css
+++ b/style.css
@@ -61,8 +61,8 @@ body {
     #portraitButtonDiv{
         border: 4px outset rgb(122, 113, 113);
         margin: 5%;
-        padding: 1vw;
-        height: 20%;
+        padding: 3%;
+        height: 30%;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
@@ -73,7 +73,7 @@ body {
     .portraitButtons{
         border: 4px outset rgb(122, 113, 113);
         width: 35vw;
-        height: 8vh;
+        height: 12.5vh;
         font-size: 2vh;
         background-color: black;
         color: white;
@@ -82,6 +82,7 @@ body {
         align-items: center;
         margin: 2vw;
         justify-content: center;
+        padding: 5%;
     }  
 
     .portraitButtonText{
@@ -100,21 +101,25 @@ body {
     }
 
     #portraitContainer{
-        height: 40%;
+        height: 36%;
         border: 4px outset rgb(122, 113, 113);
         margin: 0% 10%;
         text-align: center;
         background-color: rgba(0, 0, 0, 0.5);
+        align-items: center;
+        justify-content: center;
+        padding: 5%;
     }
 
     h1{
         display: grid;
         justify-content: center;
-        margin: 5% 5%;
         height: auto;
         font-size: 3.7vh;
         font-family: monospace;
-        -webkit-text-stroke: 2px black;
+        padding: 2%;
+        font-weight: 400;
+        text-shadow: 2px 2px rgb(13, 13, 13);
     }
 
     #rotateScreenIcon{
@@ -239,6 +244,11 @@ body {
 
 #specialtyBtnDiv{
     width: 80%;
+}
+
+.mocktail-buttons{
+    width: 14vw;
+    height: 20vh;
 }
 
 .form-container{
