--- a/style.css
+++ b/style.css
@@ -82,7 +82,7 @@ body {
         align-items: center;
         margin: 2vw;
         justify-content: center;
-        padding: 5%;
+        padding: 6%;
     }  
 
     .portraitButtonText{
@@ -101,7 +101,7 @@ body {
     }
 
     #portraitContainer{
-        height: 36%;
+        height: 30%;
         border: 4px outset rgb(122, 113, 113);
         margin: 0% 10%;
         text-align: center;
@@ -115,7 +115,7 @@ body {
         display: grid;
         justify-content: center;
         height: auto;
-        font-size: 3.7vh;
+        font-size: 1.5em;
         font-family: monospace;
         padding: 2%;
         font-weight: 400;
